# Core

./: .gitmodules  CMakeLists.txt
src/: PCH.h
src/Core/: Aliases.h  Application.cpp  Application.h  DebugTools.cpp  DebugTools.h  EventStack.cpp  EventStack.h  Files.cpp  Files.h  GameObject.h  Image.h  Logger.cpp  Scene.cpp  Scene.h  Serializer.cpp  Serializer.h
src/Core/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  DirectionalLight.h  Entity.cpp  Entity.h  InspectorTypes.cpp  InspectorTypes.h  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Movement.cpp  Movement.h  Properties.h  Sprite.h  TestRotationScript.h  TextMesh.h  Transform.cpp  Transform.h  VertexData.h
src/Core/Physics/: Collider.h  ColliderApi.h  PhysicsController.h
src/Core/Renderer/: Framebuffer.h  Renderer.h  RendererResourceCreator.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h
src/Core/Window/: Window.cpp  Window.h  WindowResourceCreator.h
